tests/ui/03-add-sub-wrong-unit.rs
use typed_phy::IntExt;

fn main() {
    let _ = 5.kg() + 10.sqm();
    let _ = 10.m() - 5.mps();
}
